// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsGroup /> renders correctly 1`] = `
<ul
  className="tabs-list"
>
  <li
    className="tab-item"
    key="0"
    onClick={[Function]}
  >
    <span>
      item 1
    </span>
  </li>
  <li
    className="tab-selected"
    key="1"
    onClick={[Function]}
  >
    <span>
      item 2
    </span>
  </li>
  <li
    className="tab-item"
    key="2"
    onClick={[Function]}
  >
    <span>
      item 3
    </span>
  </li>
</ul>
`;

exports[`<TabsGroup /> renders correctly with customClasses 1`] = `
<ul
  className="test-items-list tabs-list"
>
  <li
    className="test-item tab-item"
    key="0"
    onClick={[Function]}
  >
    <span>
      item 1
    </span>
  </li>
  <li
    className="test-selected-item tab-selected"
    key="1"
    onClick={[Function]}
  >
    <span>
      item 2
    </span>
  </li>
  <li
    className="test-item tab-item"
    key="2"
    onClick={[Function]}
  >
    <span>
      item 3
    </span>
  </li>
</ul>
`;

exports[`<TabsGroup /> renders correctly without params 1`] = `
<ul
  className="tabs-list"
/>
`;
